[package]
name = "nntp-rs"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[lib]
name = "nntp_rs"
path = "src/lib.rs"

[[bin]]
name = "nntp-rs-server"
path = "src/main.rs"

# Include debug info in release builds.
[profile.release]
debug = true

# Build dependencies in optimized mode, even for debug builds.
[profile.dev.package."*"]
opt-level = 3

# Build dev-dependencies in non-optimized mode, even for release builds.
[profile.dev.build-override]
opt-level = 0

[dependencies]
arc-swap = "0.4.7"
async-channel = "1.1.1"
bytes = "0.5.5"
chrono = "0.4.12"
clap = "2.33.1"
core_affinity = "0.5.10"
crossbeam-channel = "0.4.2"
crossbeam-queue = "0.2.3"
futures = "0.3.5"
fs2 = "0.4.3"
jemallocator = "0.3.2"
ipnet = "2.3.0"
libc = "0.2.71"
linked-hash-map = "0.5.3"
log = "0.4.8"
md5 = "0.7.0"
memchr = "2.3.3"
memmap = "0.7.0"
net2 = "0.2.34"
num_cpus = "1.13.0"
once_cell = "1.4.0"
parking_lot = "0.11.0"
regex = "1.3.9"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_derive = "1.0.114"
serde_json = "1.0.56"
structopt = "0.3.15"
syslog = "5.0.0"
tokio = { version = "0.2.21", features = [ "full" ] }
toml = "0.5.6"
trust-dns-resolver = "0.19.5"
users = "0.10.0"
smallvec = "1.4.0"
lock_api = "0.4.0"

[dev-dependencies]
env_logger = "0.7.1"
criterion = "0.3.3"

[[bench]]
name = "clocksources"
harness = false

[[bench]]
name = "nntp_rs"
harness = false
