[package]
name = "nntp-rs"
version = "0.2.1"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[lib]
name = "nntp_rs"
path = "src/lib.rs"

[[bin]]
name = "nntp-rs-server"
path = "src/main.rs"

[features]
# - The MPMC implementation. Either "async-channel" or "crossfire".
# - The DNS resolver. Either "trust-dns-resolver" or "dns-lookup".
default = [ "crossfire", "dns-lookup" ]

# Include debug info in release builds.
[profile.release]
debug = true

# Build dependencies in optimized mode, even for debug builds.
[profile.dev.package."*"]
opt-level = 3

# Build dev-dependencies in non-optimized mode, even for release builds.
[profile.dev.build-override]
opt-level = 0

[dependencies]
arc-swap = "0.4.7"
array-init = "0.1.1"
async-channel = { version = "1.1.1", optional = true }
bytes = "1.0"
chrono = "0.4.12"
clap = "2.33.1"
core_affinity = "0.5.10"
crossbeam-channel = "0.4.2"
crossbeam-queue = "0.2.3"
crossfire = { version = "0.1.4", optional = true }
curlyconf = { version = "0.1.0-alpha.6" }
dns-lookup = { version = "1.0.5", optional = true }
futures = "0.3.5"
fs2 = "0.4.3"
jemallocator = "0.3.2"
ipnet = { version = "2.3.0", features = [ "serde" ] }
libc = "0.2.71"
linked-hash-map = "0.5.3"
log = "0.4.8"
md5 = "0.7.0"
memchr = "2.3.3"
memmap = "0.7.0"
net2 = "0.2.34"
num_cpus = "1.13.0"
once_cell = "1.4.0"
parking_lot = "0.11.0"
rand = "0.7.3"
regex = "1.3.9"
region = "2.2.0"
serde = { version = "1.0.114", features = [ "derive", "rc" ] }
serde_derive = "1.0.114"
serde_json = "1.0.56"
socket2 = "0.3.12"
structopt = "0.3.15"
syslog = "5.0.0"
tokio = { version = "1.0", features = [ "full" ] }
tokio-stream = "0.1"
#trust-dns-resolver = { version = "0.20", optional = true }
typic = "0.3.0"
users = "0.10.0"
smallvec = "1.4.0"
smartstring = { version = "0.2.3", features = [ "serde" ] }

[dev-dependencies]
env_logger = "0.7.1"
criterion = "0.3.3"

[[bench]]
name = "clocksources"
harness = false

[[bench]]
name = "nntp_rs"
harness = false
