[package]
name = "nntp-rs"
version = "0.2.4"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[lib]
name = "nntp_rs"
path = "src/lib.rs"

[[bin]]
name = "nntp-rs-server"
path = "src/main.rs"

[features]
# - The MPMC implementation. Either "async-channel" or "crossfire".
# - The DNS resolver. Either "trust-dns-resolver" or "dns-lookup".
default = [ "crossfire", "dns-lookup" ]

# Include debug info in release builds.
[profile.release]
debug = true

# Build dependencies in optimized mode, even for debug builds.
[profile.dev.package."*"]
opt-level = 3

# Build dev-dependencies in non-optimized mode, even for release builds.
[profile.dev.build-override]
opt-level = 0

[dependencies]
arc-swap = "1.2.0"
array-init = "2.0.0"
async-channel = { version = "1.6.1", optional = true }
bytemuck = { version = "1.5.1", features = [ "derive" ] }
bytes = "1.0.1"
chrono = "0.4.19"
clap = "2.33.3"
core_affinity = "0.5.10"
crossbeam-channel = "0.5.1"
crossbeam-queue = "0.3.1"
crossfire = { version = "0.1.4", optional = true }
curlyconf = { version = "0.1.0", path = "../curlyconf-rs" }
dns-lookup = { version = "1.0.6", optional = true }
futures = "0.3.14"
fs2 = "0.4.3"
jemallocator = "0.3.2"
ipnet = { version = "2.3.0", features = [ "serde" ] }
libc = "0.2.94"
linked-hash-map = "0.5.4"
log = "0.4.14"
md5 = "0.7.0"
memchr = "2.3.4"
memmap = "0.7.0"
net2 = "0.2.37"
num_cpus = "1.13.0"
once_cell = "1.7.2"
parking_lot = "0.11.1"
rand = "0.8.3"
regex = "1.4.6"
region = "2.2.0"
serde = { version = "1.0.125", features = [ "derive", "rc" ] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
socket2 = "0.4.0"
static_assertions = "1.1.0"
structopt = "0.3.21"
syslog = "5.0.0"
tokio = { version = "1.5.0", features = [ "full" ] }
tokio-stream = "0.1.5"
trust-dns-resolver = { version = "0.20.2", optional = true }
users = "0.11.0"
smallvec = "1.6.1"
smartstring = { version = "0.2.6", features = [ "serde" ] }

[dev-dependencies]
env_logger = "0.8.3"
criterion = "0.3.4"

[[bench]]
name = "clocksources"
harness = false

[[bench]]
name = "nntp_rs"
harness = false
