[package]
name = "nntp-rs-server"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]

[dependencies]
bytes = "0.4.9"
clap = "2.29.4"
env_logger = "0.5"
futures = "0.1.24"
futures-cpupool = "0.1.8"
lazy_static = "1.1.0"
libc = "0.2.40"
log = "0.4.4"
memchr = "2.0.2"
net2 = "0.2.33"
serde = "1.0"
serde_derive = "1.0"
tk-listen = "0.2.0"
tokio = "0.1.8"
toml = "0.4.6"

nntp-rs-history = { path = "../history" }
nntp-rs-spool = { path = "../spool" }
nntp-rs-util = { path = "../util" }
num_cpus = "1.8.0"
time = "0.1.40"
dns-lookup = "0.9.1"
ipnet = "2.0.0"
parking_lot = "0.6.4"
regex = "1.0.5"

