[package]
name = "nntp-rs-spool"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]

[dependencies]
nntp-rs-util = { path = "../util" }
byteorder = "1.2.6"
log = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.39"
libc = "0.2.43"
bytes = "0.4.10"
futures-cpupool = "0.1.8"
futures = "0.1.24"
