[package]
name = "nntp-rs-util"
version = "0.1.0"
authors = ["mikevs <mikevs@xs4all.net>"]

[dependencies]
serde = "1.0.76"
serde_derive = "1.0.76"
lazy_static = "1.1.0"
regex = "1.0.5"
chrono = "0.4.6"
libc = "0.2.43"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "wildmat"
harness = false

